# online_shop_oop

./: README.md  backup_2026-03-08.json  main.py  pyproject.toml
shop/: cart.py  order.py  payment_processor.py  product.py  shop.py
src/: __init__.py  cart.py  customer.py  order.py  payment_processor.py  product.py  shop.py
tests/: test_shop.py
